feat: 調整檔案儲存後資訊儲存的方式
依據需求調整:
    1. 避免同檔名伺服器不知道要給出哪個檔案，多一個顯示用的資料夾名稱欄位當條件。
    2. 依據 1. 的調整，變更 API URI、C、S 和 R 接收的參數。
    3. 調整 Migration 和 Model。
    4. 調整 PHP 註解和 Swagger 註解。
