# file-storage-service-backend/routes/web.php
@@ -22,7 +22,7 @@ $router->group(['prefix' => 'api/v1'], function (Router $router) {
     // 合併分塊
     $router->post('/file/chunk/merge', 'FileController@mergeChunks');
     // 取得檔案資訊
-    $router->get('/file/info/{filename}', 'FileController@getFileInformation');
+    $router->get('/file/info/{folder}/{filename}', 'FileController@getFileInformation');
     // 取得單一檔案
     $router->get('/file/{filename}', 'FileController@getSingleFile');
     // 多檔包 Zip 下載
